# backend

./: .env  .gitignore  .vercelignore  Dockerfile  main.py  pyproject.toml  requirements.txt
scratchpad/: supabase_sql_operations.py  supabase_storagel.ipynb
